--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint src/**/*.js",
     "pretest": "./node_modules/.bin/eslint --fix --ignore-path .gitignore .",
-    "precommit": "npm lint"
+    "precommit": "npm run lint"
   },
   "bin": {
     "husky-conf": "index.js"
