--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Configure husky in your project.",
   "main": "index.js",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint *.js",
+    "lint": "./node_modules/.bin/eslint",
     "pretest": "./node_modules/.bin/eslint --fix --ignore-path .gitignore .",
     "prepush": "npm run lint",
     "precommit": "npm run lint"
@@ -31,11 +31,11 @@
   "devDependencies": {
     "eslint": "^5.0.0",
     "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
-    "husky": "^0.14.3",
+    "husky": "^1.0.0-rc.9",
     "jest": "^23.1.0"
   },
   "jest": {
