--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Configure husky in your project.",
   "main": "index.js",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint",
+    "lint": "./node_modules/.bin/eslint **/*.js",
     "pretest": "./node_modules/.bin/eslint --fix --ignore-path .gitignore .",
     "prepush": "npm run lint",
     "precommit": "npm run lint"
@@ -43,13 +43,11 @@
   },
   "dependencies": {
     "chalk": "^2.4.1",
-    "common-tags": "^1.8.0",
     "dot-prop": "^4.2.0",
     "lodash": "^4.17.10",
     "meow": "^5.0.0",
     "read-pkg": "^3.0.0",
     "update-notifier": "^2.5.0",
-    "write-json-file": "^2.3.0",
     "write-pkg": "^3.2.0"
   },
   "husky": {
