--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "git-hooks",
     "hooks"
   ],
-  "author": "Joydip Roy(rjoydip)",
-  "email": "joydipand@gmail.com",
+  "repository": "husky-conf",
+  "author": {
+    "name": "Joydip Roy",
+    "email": "joydipand@gmail.com"
+  },
   "license": "MIT",
   "devDependencies": {
     "eslint": "^5.0.0",
